--- a/backmatter/bibliography.bib
+++ b/backmatter/bibliography.bib
@@ -11,3 +11,11 @@
   year={},
   publisher={}
 }
+
+@misc{openmp-spec,
+  author = {{OpenMP Architecture Review Board}},
+  title = {{OpenMP} Application Programming Interface},
+  howpublished = {\url{https://www.openmp.org/specifications/}},
+  year = {2024},
+  note = {Version 5.2}
+}
