--- a/styles/ppbook.sty
+++ b/styles/ppbook.sty
@@ -75,6 +75,7 @@
 
 % --- Figures/tables ---
 \RequirePackage{graphicx}
+\RequirePackage{float} % for [H] placement to prevent floats moving
 \RequirePackage{caption}
 \captionsetup{
   font=small,
