--- a/styles/ppboxes.sty
+++ b/styles/ppboxes.sty
@@ -25,6 +25,7 @@
 % Different “semantic” boxes
 \newtcolorbox{ppnote}[1][]{ppbox={Note}, colframe=PPBlue, #1}
 \newtcolorbox{ppkey}[1][]{ppbox={Key Idea}, colframe=PPGood, #1}
+\newtcolorbox{ppquestion}[1][]{ppbox={Question}, colframe=PPBlue, #1}
 \newtcolorbox{pppitfall}[1][]{ppbox={Pitfall}, colframe=PPWarn, #1}
 \newtcolorbox{ppexample}[1][]{ppbox={Example}, colframe=PPGray, #1}
 \newtcolorbox{ppdefn}[1][]{ppbox={Definition}, colframe=PPBlue, #1}
